# apriltags3_ros_search

./: README.md  loadbag.sh
KCF/: memo.txt  sankou.txt
KCF/MyKcf/: kcf.py  run.py
apriltag_ros/config/: .tags.yaml.swp  apriltags3_config.yaml  camera.yaml  camera_first.yaml  settings.yaml  tags.yaml
apriltag_ros/include/apriltag_ros/: .common_functions.h.swp  common_functions.h
apriltag_ros/launch/: apriltag3.launch  continuous_detection.launch
apriltag_ros/msg/: .AprilTagDetection.msg.swp  AprilTagDetection.msg
apriltag_ros/scripts/: apriltags3.py
apriltag_ros/src/: .common_functions.cpp.swp  .continuous_detector.cpp.swp  common_functions.cpp  continuous_detector.cpp  continuous_detector_origin.cpp  sankoubunken.txt
tag_trim/: .CMakeLists.txt.swp  CMakeLists.txt  nodelet_plugins.xml  package.xml  sankou.txt
tag_trim/backup/: plugin_nodelet_image_trim.cpp  plugin_nodelet_image_trim.h
tag_trim/config/calibrated_data/normal_dynabook/: camera.yaml
tag_trim/config/calibrated_data/normal_dynabook/calibrationdata/: ost.txt  ost.yaml
tag_trim/include/: camera.h  share.h
tag_trim/launch/: apriltag3.launch  apriltag3dake.launch  image_proc.launch  mask_python_edition.launch  nodelet_apriltag3.launch  nodelet_cam.launch  nodelet_iphone7cam.launch  rosbag.launch
tag_trim/launch/Reinforce-Learning/: learning.launch
tag_trim/launch/Reinforce-Learning/data/: .trim_data.csv.swp  mini.csv  powerpo6_data.csv  trim_data.csv
tag_trim/launch/Reinforce-Learning/data/aditional/: .kaiseki.py.swp  data1.csv  data10.csv  data2.csv  data3.csv  data4.csv  data5.csv  data6.csv  data7.csv  data8.csv  data9.csv  data_mini3.csv  data_mini6.csv  instant_env.py  kaiseki.py  kaiseki_ori.py  observer.py  rldata1.csv
tag_trim/launch/Reinforce-Learning/data/aditional/dqn_data/: powerpo.py  rl2data3.csv  rl2data4.csv  rldata1.csv  rldata2.csv  rldata3.csv  rldata4.csv  rldata5.csv
tag_trim/launch/Reinforce-Learning/data/kaiseki/: .kalman_filter.py.swp  .soturon.py.swp  first.py  kalman_filter.cpp  kalman_filter.py  mini20210105.csv  mini20210112.csv  powerpo5.py  powerpo6.py  second.py  soturon.py  speed_kalman.py  third.py
tag_trim/launch/camdata/: comand.txt
tag_trim/msg/: AprilTagDetection.msg  ltrb.msg  ltrbArray.msg
tag_trim/scripts/: .Apriltags.py.swp  .ApriltagsDetector.py.swp  .ImageConverter.py.swp  .kalman_filter.py.swp  .masking.py.swp  .uvApriltags.py.swp  Apriltags.py  ApriltagsDetector.py  ApriltagsKalman.py  Apriltags_ros.py  ImageConverter.py  bagmodule.py  camera.py  kalman_filter.py  masking.py  read_tag.py  recoder.py  recoder_mini.py  uvApriltags.py
tag_trim/scripts/ReinforceLearning/: .dqn_agent.py.swp  .state.py.swp  LApriltag_ros.py.back  LApriltags_ros.py  LImageConverter_ros.py  agent.py  dqn_agent.py  dqn_agent_ver2.py  dyna.py  env.py  env2.py  env2_z.py  lapriltag_ros.py.back  learning.py  matplot.py  q_learning.py  recoder_rl.py  recoder_rl2.py  state.py  time_checker.py
tag_trim/scripts/ReinforceLearning/sankou/: ronbun.txt
tag_trim/src/: .image_grabber.cpp.swp  .plugin_nodelet_image_trim.cpp.swp  .plugin_nodelet_image_trim.h.swp  .plugin_nodelet_image_trim_main.cpp.swp  Real-Time-Video-Stabilization  apriltag.cpp  apriltag.h  apriltag_agent.cpp  apriltag_agent.h  apriltag_detector.cpp  apriltag_detector.h  camera.cpp  camera.h  image_grabber.cpp  image_grabber.h  image_trim.cpp  image_trim.h  image_trim_main.cpp  multi.cpp  plugin_nodelet_image_trim.cpp  plugin_nodelet_image_trim.cpp.backup  plugin_nodelet_image_trim.h  plugin_nodelet_image_trim.h.backup  plugin_nodelet_image_trim_main.cpp  tracking.cpp  tracking.h  uv_apriltag.cpp  uv_apriltag.h  uv_tracking.cpp  uv_tracking.h
tag_trim/src/image_grabber/: image_grabber.cpp  image_grabber.h  image_grabber_ros_usb_cam.cpp  image_grabber_ros_usb_cam.h
tag_trim/src/kalman/: kalman.h
tag_trim/src/particle/: particle.h  particle_main.cpp  tag_particle.cpp  tag_particle.h  vision_particle.h
tag_trim/src/tracker/: plugin_nodelet_tracker.cpp  plugin_nodelet_tracker.h  plugin_nodelet_tracker_main.cpp  share.cpp  share.h
vitra/: vitra.py  vitra2.py
